--- a/agenda/css/lab.css
+++ b/agenda/css/lab.css
@@ -18,7 +18,65 @@ h1, h2 {
 main {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  gap: 25px;
   background: #779DFF;
+  display: grid;
+  align-items: center;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-auto-columns: 1fr 75% 1fr;
+  grid-template-areas: 
+    "a1 a1 ."
+    ". a2 ."
+    ". a3 a3"
+  ;
+}
+
+#limg {
+  grid-area: a1;
+  background:
+    linear-gradient(to right, #000d, #0005),
+    url(https://images.unsplash.com/photo-1558655146-d09347e92766?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+  ;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 75%;
+  color: #FF956E;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+  border: 2px solid red;
+}
+
+#middle {
+  grid-area: a2;
+  height: 100%;
+  border: 2px solid red;
+}
+
+#rimg {
+  grid-area: a3;
+  background:
+    linear-gradient(to right, #0005, #000d),
+    url(https://images.unsplash.com/photo-1524536120883-854d2c00bf1f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+  ;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 75%;
+  color: #FF956E;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  padding-right: 30px;
+  border: 2px solid red;
+}
+
+#rimg div, #limg div {
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
