--- a/color-palettes/css/style.css
+++ b/color-palettes/css/style.css
@@ -1,12 +1,39 @@
+/* Color Palette 1 */
 #head1 {
     font-family: cursive;
     text-align: center;
 }
-
 #c1 {
     background-color: #3bff00;
-    color: white;
+    color: #111;
     font-family: cursive;
+    text-align: center;
+    padding: 24px;
+}
+#c2 {
+    background-color: #00ccff;
+    color: #111;
+    font-family: cursive;
+    text-align: center;
+    padding: 24px;
+}
+#c3 {
+    background-color: #ff8123;
+    color: #111;
+    font-family: cursive;
+    text-align: center;
+    padding: 24px;
+}
+
+/* Color Palette 2 */
+#head2 {
+    font-family: fantasy;
+    text-align: center;
+}
+#c4 {
+    background-color: #e7d8ff;
+    color: #111;
+    font-family: fantasy;
     text-align: center;
     padding: 24px;
 }
