--- a/upside-down-tetris/css/style.css
+++ b/upside-down-tetris/css/style.css
@@ -6,3 +6,39 @@
 
     Good luck, and have fun!
 */
+.tetris-block {
+    padding: 25px;
+    border-width: 12px;
+    border-style: outset;
+    display: inline-block;
+}
+
+.coral {
+    background-color: coral;
+    border-color: coral;
+}
+.lav {
+    background-color: lavender;
+    border-color: lavender;
+}
+.red {
+    background-color: red;
+    border-color: red;
+}
+.fg {
+    background-color: forestgreen;
+    border-color: forestgreen;
+}
+.so {
+    background-color: #5fbc99;
+    border-color: orange;
+}
+
+.long {
+    padding: 25px 61.75px;
+}
+
+.blank {
+    background-color: transparent;
+    border-color: transparent;
+}
