--- a/agenda/css/style.css
+++ b/agenda/css/style.css
@@ -27,7 +27,7 @@ main {
 #right {
   background:
     linear-gradient(to bottom, #000a, #0000, #000a),
-    url(https://images.unsplash.com/photo-1596414086775-3e321ab08f36?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+    url(../images/fact1.png)
   ;
   background-size: cover;
   background-position: center;
@@ -264,4 +264,23 @@ a.disabled {
     font-size: 1rem;
   }
   
+}
+
+.additional-info a {
+  color: #FF956E;
+  font-weight: 800;
+  font-size: 1rem;
+  text-decoration: none;
+  display: block;
+  width: max-content;
+  margin: 10px 0px 0px;
+  padding: 10px 0px;
+  border: 5px ridge #FF956E00;
+  transition: all 0.5s;
+}
+.additional-info a:hover {
+  letter-spacing: 0.2em;
+  border: 5px ridge #FF956E;
+  padding: 10px;
+  text-align: center;
 }
