--- a/license/css/style.css
+++ b/license/css/style.css
@@ -6,6 +6,8 @@
 
     Good luck, and have fun!
 */
+@import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
+
 #license {
     /* color: #fdcc73; */
     /* color: #ed8c4f; */
@@ -80,6 +82,7 @@ h4 {
     text-align: center;
     font-size: 28px;
     font-weight: bold;
+    font-family: "Ms Madi", cursive;
 }
 
 #data-left, #data-right {
