--- a/demos/two-column-layouts-grid-demo/css/style.css
+++ b/demos/two-column-layouts-grid-demo/css/style.css
@@ -8,9 +8,14 @@ body {
 
 #grid-layout {
     display: grid;
-    grid-template-columns: 1fr 250px;
+    grid-template-columns: 1fr 450px 250px 1fr;
+    /*
+        The dots are a special area "name" that
+        represent an unassigned or empty cell,
+        which is perfect for the gutters we want.
+    */
     grid-template-areas:
-        "content sidebar"
+        ". content sidebar ."
     ;
 }
 
@@ -34,7 +39,20 @@ body {
     padding: 0px 12px;
 }
 
+#sidebar a {
+    color: #0b8f82;
+    text-decoration: none;
+}
+
+#sidebar li {
+    border-bottom: 1px solid #0b8f82;
+    padding: 8px 0px;
+}
+#sidebar li:last-child {
+    border-bottom: 0px;
+}
+
 #main {
-    background-color: lightcyan;
     grid-area: content;
+    margin: 0px 36px;
 }
