Two Columns Mixed Demo - Incomplete

--- a/demos/two-column-layout-mixed-demo/css/style.css
+++ b/demos/two-column-layout-mixed-demo/css/style.css
@@ -6,13 +6,56 @@ body {
     font-family: sans-serif;
 }
 
+#grid-layout {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-areas:
+        "header header"
+        "sidebar main"
+    ;
+}
+
 #header {
-    background-color: lightskyblue;
+    grid-area: header;
+    padding: 0px 36px;
+}
+#header a {
+    text-decoration: none;
+}
+#header #me {
+    color: #111;
+}
+#header #tube {
+    background-color: #ff6600;
+    color: white;
+    padding: 4px;
+    border-radius: 12px;
 }
 
 #sidebar {
-    background-color: lightcyan;
+    grid-area: sidebar;
+    padding: 0px 24px;
 }
+#sidebar ul {
+    padding: 12px 0px;
+    margin: 0px;
+    list-style-type: none;
+    border-bottom: 1px solid #aaa;
+}
+#sidebar ul a {
+    text-decoration: none;
+    color: #111;
+    padding: 12px;
+    display: block;
+}
+
+#sidebar ul a:hover {
+    background-color: #eee;
+    border-radius: 12px;
+}
+
+
 #main {
     background-color: lightgoldenrodyellow;
+    grid-area: main;
 }
