--- a/demos/two-column-layout-mixed-demo/css/style.css
+++ b/demos/two-column-layout-mixed-demo/css/style.css
@@ -18,6 +18,8 @@ body {
 #header {
     grid-area: header;
     padding: 0px 36px;
+    border-bottom: 0.5px solid #ff6600;
+    margin-bottom: 25px;
 }
 #header a {
     text-decoration: none;
@@ -32,6 +34,10 @@ body {
     border-radius: 12px;
 }
 
+a {
+    transition: all 0.5s;
+}
+
 #sidebar {
     grid-area: sidebar;
     padding: 0px 24px;
@@ -40,7 +46,7 @@ body {
     padding: 12px 0px;
     margin: 0px;
     list-style-type: none;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid #ff6600;
 }
 #sidebar ul a {
     text-decoration: none;
@@ -50,8 +56,10 @@ body {
 }
 
 #sidebar ul a:hover {
-    background-color: #eee;
+    background-color: #ff6600;
     border-radius: 12px;
+    letter-spacing: 0.2em;
+    color: #fff;
 }
 
 
@@ -69,7 +77,6 @@ body {
 
 .metube-item .thumbnail-placeholder {
     aspect-ratio: 16 / 9;
-    background: radial-gradient(at top left, crimson, orange);
     border-radius: 8px;
 }
 
@@ -92,4 +99,19 @@ body {
 
 .metube-item .video-channel {
     margin-bottom: 4px;
+}
+
+/* 1st Method CSS */
+.metube-item .thumbnail-placeholder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 8px;
+}
+
+/* 2nd Method CSS */
+#m2 .thumbnail-placeholder {
+    background-image: url(../images/screamy.jpg);
+    background-size: cover;
 }
