Side by Side Demo: Media & Text

--- a/demos/side-by-side-demo/css/style.css
+++ b/demos/side-by-side-demo/css/style.css
@@ -12,7 +12,7 @@ body {
     margin: 0px auto;
 }
 
-/* CARD SECTION CSS */
+/* CARD SECTION STYLES */
 .cards-container {
     display: flex;
     justify-content: space-between;
@@ -40,4 +40,39 @@ body {
     background-color: #5b00ed;
     color: #ffd255;
     padding: 48px;
+}
+
+/* MEDIA & TEXT SECTION STYLES */
+.media-text {
+    display: flex;
+    align-items: center;
+    margin: 48px 0px;
+}
+
+.media-text .image-container {
+    flex: 1;
+}
+.media-text .text-container {
+    flex: 1;
+    padding: 36px;
+}
+
+.text-container h3 {
+    font-size: 48px;
+}
+
+.text-container a {
+    font-size: 28px;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #5b00ed;
+    color: #ffd255;
+    padding: 24px 48px;
+    border-radius: 48px;
+}
+
+.image-container img {
+    width: 100%;
+    object-fit: cover;
 }
