--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -235,32 +235,32 @@ nav a:hover {
     filter: blur(5px);
 }
 .gal img:hover:nth-of-type(1) + .img-overlay {
-    background-image: url(../images/img1.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img1.jpg);
     background-position: center;
     background-size: cover;
 }
 .gal img:hover:nth-of-type(2) + .img-overlay {
-    background-image: url(../images/img2.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img2.jpg);
     background-position: center;
     background-size: cover;
 }
 .gal img:hover:nth-of-type(3) + .img-overlay {
-    background-image: url(../images/img3.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img3.jpg);
     background-position: center;
     background-size: cover;
 }
 .gal img:hover:nth-of-type(4) + .img-overlay {
-    background-image: url(../images/img4.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img4.jpg);
     background-position: center;
     background-size: cover;
 }
 .gal img:hover:nth-of-type(5) + .img-overlay {
-    background-image: url(../images/img5.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img5.jpg);
     background-position: center;
     background-size: cover;
 }
 .gal img:hover:nth-of-type(6) + .img-overlay {
-    background-image: url(../images/img6.jpg);
+    background: linear-gradient(0deg, #fff9, #fff9), url(../images/img6.jpg);
     background-position: center;
     background-size: cover;
 }
