--- a/agenda/css/lab.css
+++ b/agenda/css/lab.css
@@ -87,7 +87,7 @@ main {
   grid-area: a3;
   background:
     linear-gradient(to right, #0005, #0005),
-    url(https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+    url(https://www.greenpeace.org/static/planet4-international-stateless/2019/10/d21ffac5-gp0sttd9m-1024x683.jpg)
   ;
   background-size: cover;
   background-repeat: no-repeat;
